<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"

    >

    <Button
        android:id="@+id/btnUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ajustes_de_usuario" />

    <Button
        android:id="@+id/btnTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ajustes_de_tema" />

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/salir" />
</LinearLayout>
